fixed project display on mobile

--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: calc(100vh - 100px);
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
 }
@@ -13,7 +12,8 @@
   font-size: 35px;
 }
 .project img {
-  width: 700px;
+  width: 100%;
+  max-width: 700px;
   border-radius: 10px;
 }
 
